--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@react-navigation/bottom-tabs": "^7.4.8",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.18",
+    "@tanstack/react-query": "^5.90.2",
     "expo": "~54.0.12",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.10",
     "expo-splash-screen": "~31.0.10",
@@ -37,13 +39,14 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.13.0",
     "react-native-web": "~0.21.1",
-    "react-native-worklets": "0.6.0"
+    "react-native-worklets": "0.6.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
