--- a/app.json
+++ b/app.json
@@ -10,7 +10,8 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.zet"
+      "bundleIdentifier": "com.geniusproject.zet",
+      "usesAppleSignIn": true
     },
     "android": {
       "adaptiveIcon": {
@@ -98,7 +99,9 @@
             ]
           }
         }
-      ]
+      ],
+      "expo-secure-store",
+      "expo-apple-authentication"
     ],
     "experiments": {
       "typedRoutes": true,
