앱 초기 설정 및 종속성 업데이트
*   Android 적응형 아이콘 배경색을 다크 테마에 맞춰 변경합니다
*   앱 고유 식별을 위해 Android 패키지 이름을 업데이트합니다
*   푸시 알림 기능 활성화 및 아이콘 설정을 위해 `expo-notifications` 플러그인을 추가합니다
*   앱 내 웹 콘텐츠 표시를 위해 `expo-web-browser` 플러그인을 추가합니다
*   Expo Application Services (EAS) 빌드 설정을 위한 프로젝트 ID를 추가합니다
*   전반적인 프로젝트 안정성 및 최신 기능 지원을 위해 종속성 패키지 버전을 업데이트합니다
*   기기 정보 접근을 위해 `expo-device` 종속성을 추가합니다
*   새로운 알림 아이콘 이미지 파일을 추가합니다

--- a/app.json
+++ b/app.json
@@ -15,14 +15,14 @@
     },
     "android": {
       "adaptiveIcon": {
-        "backgroundColor": "#E6F4FE",
+        "backgroundColor": "#1E1E1E",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
         "backgroundImage": "./assets/images/android-icon-background.png",
         "monochromeImage": "./assets/images/android-icon-monochrome.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.anonymous.zet"
+      "package": "com.geniusproject.zet"
     },
     "web": {
       "output": "static",
@@ -101,11 +101,24 @@
         }
       ],
       "expo-secure-store",
-      "expo-apple-authentication"
+      "expo-apple-authentication",
+      [
+        "expo-notifications",
+        {
+          "icon": "./assets/images/notification-icon.png",
+          "color": "#1E1E1E"
+        }
+      ],
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true,
       "reactCompiler": true
+    },
+    "extra": {
+      "eas": {
+        "projectId": "9aeea512-5d4e-49b6-9d35-59a32ffa1821"
+      }
     }
   }
 }
