--- a/package.json
+++ b/package.json
@@ -14,36 +14,38 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
-    "@react-navigation/bottom-tabs": "^7.4.8",
+    "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
-    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.2",
-    "expo": "~54.0.12",
+    "expo": "54.0.22",
     "expo-apple-authentication": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
-    "expo-image": "~3.0.8",
+    "expo-image": "~3.0.10",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.10",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.14",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
-    "expo-system-ui": "~6.0.7",
-    "expo-web-browser": "~15.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-web-browser": "~15.0.9",
     "lottie-react-native": "~7.3.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.2",
     "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.1",
-    "react-native-worklets": "0.6.0",
+    "react-native-worklets": "0.5.2",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
