--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
-      "package": "com.geniusproject.zet"
+      "package": "com.geniusproject.zet",
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "output": "static",
