feat: Expo 개발 환경 및 iOS 빌드 설정 개선
iOS 앱 스키마 및 Apple 팀 ID를 설정합니다.
expo-dev-client 플러그인을 추가하여 개발 클라이언트 빌드를 활성화합니다.
npm에서 Yarn으로 패키지 관리자를 전환합니다.
iOS 빌드 시 LANG 환경 변수를 명시적으로 설정하여 일관성을 확보합니다.
시작 화면 버튼 텍스트의 폰트 두께를 조정합니다.

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.geniusproject.zet",
-      "usesAppleSignIn": true
+      "usesAppleSignIn": true,
+      "scheme": "zet",
+      "appleTeamId": "ZMP384EB88"
     },
     "android": {
       "adaptiveIcon": {
@@ -110,7 +112,13 @@
           "color": "#1E1E1E"
         }
       ],
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "expo-dev-client",
+        {
+          "launchMode": "most-recent"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true,
