--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
-    "ios": "expo run:ios",
+    "ios": "LANG=en_US.UTF-8 expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -21,6 +21,7 @@
     "expo": "54.0.22",
     "expo-apple-authentication": "~8.0.7",
     "expo-constants": "~18.0.9",
+    "expo-dev-client": "^6.0.17",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -46,7 +47,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.1",
-    "react-native-worklets": "0.5.2",
+    "react-native-worklets": "0.5.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
