--- a/package.json
+++ b/package.json
@@ -48,13 +48,24 @@
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.1",
     "react-native-worklets": "0.5.1",
+    "zod": "^3.23.8",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@anatine/zod-mock": "^3.14.0",
+    "@faker-js/faker": "^9.2.0",
     "@types/react": "~19.1.0",
+    "base-64": "^1.0.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
+    "fast-text-encoding": "^1.0.6",
+    "msw": "^2.12.0",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-polyfill-globals": "^3.1.0",
+    "react-native-url-polyfill": "^2.0.0",
+    "text-encoding": "^0.7.0",
+    "typescript": "~5.9.2",
+    "web-streams-polyfill": "^4.2.0"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
