--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@gorhom/bottom-sheet": "^5.2.6",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@tanstack/react-query": "^5.90.2",
-    "expo": "54.0.22",
+    "expo": "54.0.23",
     "expo-apple-authentication": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-dev-client": "^6.0.17",
@@ -60,7 +61,7 @@
     "eslint-config-expo": "~10.0.0",
     "fast-text-encoding": "^1.0.6",
     "msw": "^2.12.0",
-    "react-native-get-random-values": "^2.0.0",
+    "react-native-get-random-values": "~1.11.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-url-polyfill": "^2.0.0",
     "text-encoding": "^0.7.0",
